# fusion_AI_council

./: .gitignore  README.md  fusion.py  pyproject.toml  test_models.txt
fusion_ai_council/: __init__.py  cli.py  config.py  rerun.py  runner.py  storage.py  types.py
fusion_ai_council/context/: __init__.py  bundle.py  modes.py
fusion_ai_council/judge/: __init__.py  parse.py  prompt.py
fusion_ai_council/models/: __init__.py  agy.py  base.py  claude.py  codex.py
runs/20260619_214027/: 01_gemini.md  02_claude.md  03_codex_initial.md  04_final.md  metadata.json
runs/20260619_222524/: 01_gemini.md  02_claude.md  03_codex_initial.md  04_final.md  metadata.json
runs/20260619_230750/: 00_context_bundle.md
tests/: test_config.py  test_context_and_prompts.py  test_models.py  test_runner.py
